Keep response headers in the order they were set
header() built a fresh LinkedHashMap and then handed it to Map.copyOf,
which allocates a second table and drops the order — Map.copyOf promises
none, and its iteration order varies per JVM run. The map is local and
its only reference goes into the wrapper, so an unmodifiable view of it
is as safe as a copy, one table cheaper, and ordered.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>